# hypermodern-python

./: .flake8  .gitignore  .readthedocs.yml  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt
src/hypermodern_python/: wikipedia.py
src/hypermodern_python_alterox/: console.py  wikipedia.py
tests/: __init__.py  test_console.py  test_wikipedia.py
