[tool.poetry]
name = "hypermodern-python-alterox"
version = "0.1.0"
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/alexistli/hypermodern-python"
repository = "https://github.com/alexistli/hypermodern-python"
keywords = ["hypermodern"]
authors = ["alexistli <alexis.torelli.treanton@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
click = "^8.0.1"
requests = "^2.26.0"
desert = "^2020.11.18"
marshmallow = "^3.13.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
black = "^21.9b0"
flake8 = "^3.9.2"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.3"
flake8-bugbear = "^21.9.1"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"
mypy = "^0.910"
pytype = "^2021.9.27"
typeguard = "^2.12.1"
flake8-annotations = "^2.6.2"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.0"
xdoctest = "^0.15.9"
Sphinx = "^4.2.0"
sphinx-autodoc-typehints = "^1.12.0"
codecov = "^2.1.12"

[tool.poetry.scripts]
hypermodern-python-alterox = "hypermodern_python_alterox.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python_alterox"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
